--- a/templates/account/login.html
+++ b/templates/account/login.html
@@ -2,7 +2,7 @@
     {% load static %}
     {% block title %}
     
-    Netflix - Login
+    Chillflix - Login
     {% endblock title %}
     
     {% block others %}
