--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -1,7 +1,7 @@
 {% extends '../base.html' %}
 {% load static %}
 {% block title %}
-Netflix Sign Up
+Chillflix Sign Up
 {% endblock title %}
 
 {% block other %}
